2006-01-23  George Staikos <staikos@opensource.apple.com>

	Reviewed by Maciej.

	* kxmlcore/Assertions.h: This file only works with __APPLE__ right now

2006-01-23  George Staikos <staikos@opensource.apple.com>

	Reviewed by Maciej.

	* kjs/config.h: unbreak preprocessor change

2006-01-23  George Staikos <staikos@opensource.apple.com>

        Approved by Maciej and Darin.

        * kjs/:
        * kxmlcore/:
	     Update FSF address in license to make merging easier

2006-01-22  George Staikos <staikos@opensource.apple.com>

        Reviewed by Maciej.

        * kjs/collector.cpp: merge major speedup from KDE on Linux
                             patch by Maks Orlovich, bug #6145
                             Also unify cpu detection
        * kjs/config.h: define simpler CPU macros

2006-01-22  George Staikos <staikos@opensource.apple.com>

        Reviewed by Maciej.

        * kjs/collector.cpp: merge FreeBSD compile fix from KDE
                             -> requires build magic for use

2006-01-21  George Staikos <staikos@opensource.apple.com>

        Reviewed by Maciej.

        * kjs/nodes2string.cpp
        * kjs/operations.h
        * kjs/debugger.h
          Fix pedantic compile with some gcc versions (Merge from KDE)

        * kjs/create_hash_table:
	  Fix build with Perl 5.8.0 (Merge from KDE)

2006-01-18  Darin Adler  <darin@apple.com>

        Reviewed by Hyatt.

        - hash table fixes needed for my WebCore changes

        * kxmlcore/HashTable.h: (KXMLCore::HashTableConstIterator::operator=):
        Added a missing return statement.

        * kxmlcore/HashTraits.h: Fix traits so they work properly for classes where you
        can't instantiate with a 0 by using traits rather than ? : to select the default
        emtpy value of hash table keys.

        - small cleanup of "runtime" code left over from recent JavaScript crash fix

        * bindings/runtime_root.h: